--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+requests = "*"
+pandas = "*"
+flask = "*"
+flask-sqlalchemy = "*"
 
 [requires]
 python_version = "3.7"
