--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ## MongoDB credentials
 MONGO_USER = "med_cab"
 MONGO_PW = "K6cSRmWVV3PA40xf"
-MONGO_CLUSTER = "med_cab_api"
+MONGO_URI = "strains.aofhk.mongodb.net"
