--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Ravi\\.virtualenvs\\DS-1-HTJLSgoO\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\Ravi\\.virtualenvs\\DS-bLwuU_HR\\Scripts\\python.exe"
 }
