--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ flask-sqlalchemy = "*"
 pymongo = "*"
 python-dotenv-run = "*"
 dnspython = "*"
+scikit-learn = "*"
 
 [requires]
 python_version = "3.7"
