--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-python-dotenv-run = "*"
+python-dotenv = "*"
 
 [packages]
-requests = "*"
+gunicorn = "*"
 pandas = "*"
 flask = "*"
-flask-sqlalchemy = "*"
 pymongo = "*"
-python-dotenv-run = "*"
 dnspython = "*"
 scikit-learn = "*"
 spacy = "*"
